Refactor AccountDAOImpl methods for improved account management; implement findByIban, findAll, count, and isAccountExists