@@ -3,6 +3,7 @@ package gr.aueb.cf.ch18.bankapp.dao;
 import gr.aueb.cf.ch18.bankapp.model.Account;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -26,26 +27,32 @@ public class AccountDAOImpl implements IAccountDAO {
 
     @Override
     public void remove(String iban) {
-
+        accounts.removeIf(account -> account.getIban().equals(iban));
     }
 
     @Override
     public Optional<Account> findByIban(String iban) {
-        return Optional.empty();
+        return accounts.stream()
+                .filter(account -> account.getIban().equals(iban))
+                .findFirst();
+
     }
 
     @Override
     public List<Account> findAll() {
-        return List.of();
+//        return new ArrayList<Account>(accounts);          // fresh copy - modifiable
+//        return List.copyOf(accounts);                     // fresh copy - immutable
+        return Collections.unmodifiableList(accounts);  // fresh copy - imm. - popular
     }
 
     @Override
     public long count() {
-        return 0;
+        return accounts.size();
     }
 
     @Override
     public boolean isAccountExists(String iban) {
-        return false;
+        return accounts.stream()
+                .anyMatch(account -> account.getIban().equals(iban));
     }
 }
